--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<p>Hello 大家好</p>
-<p>我是霸都丶傲天，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<h1>Privacy Policy</h1>
 
-<ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
-  <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
-</ul>
+<h3>Personal Information </h3>
+<p>"Personal Information" is information that identifies you or another person. We do not collect any personal information. We do not use any personal information. We do not share any personal information.</p>
+
+
+<h3>Non-Personal Information</h3>
+<p>"Personal Information" is information that identifies you or another person. We do not collect any personal information. We do not use any personal information. We do not share any personal information.</p>
+
+<h3>Contact Us</h3>
+<p>luodeyitian@gmail.com</p>
